Fix | Fix TasteTest and Timer bugs